ios/fullstory_flutter/shared_flutter.xcframework/ios-arm64_x86_64-simulator/Headers/shared_flutter.h

enum BlockType {
  Excluded,
  Masked,
  Recorded,
  Omitted,
  Unmatched,
};
typedef uint32_t BlockType;
typedef struct DrawingBundlerHandle DrawingBundlerHandle;
typedef struct ByteArray {
  uint8_t *ptr;
  uintptr_t len;
  uintptr_t capacity;
  bool finalized;
  bool delegated;
} ByteArray;
typedef struct DrawingHandle {
  uint8_t _priv[0];
} DrawingHandle;
typedef struct InProgressDataHandle {
  uint8_t _priv[0];
} InProgressDataHandle;
void free_byte_array(struct ByteArray *byte_array);
void free_drawing(struct DrawingHandle *data);
void draw_circle(struct DrawingHandle *handle,
                 int64_t center_x,
                 int64_t center_y,
                 float radius,
                 uint8_t alpha,
                 uint8_t red,
                 uint8_t green,
                 uint8_t blue,
                 uint64_t paint_style);
void draw_line(struct DrawingHandle *handle,
               int64_t start_x,
               int64_t start_y,
               int64_t end_x,
               int64_t end_y,
               uint8_t alpha,
               uint8_t red,
               uint8_t green,
               uint8_t blue,
               uint64_t paint_style);
void draw_text(struct DrawingHandle *handle,
               uint64_t text_id,
               int64_t x,
               int64_t y,
               uint8_t alpha,
               uint8_t red,
               uint8_t green,
               uint8_t blue,
               float text_size,
               uint64_t text_style,
               uint64_t text_align,
               int64_t text_bounds_width,
               int64_t text_bounds_height,
               bool masked);
void draw_rect(struct DrawingHandle *handle,
               int64_t left,
               int64_t top,
               int64_t right,
               int64_t bottom,
               uint8_t alpha,
               uint8_t red,
               uint8_t green,
               uint8_t blue,
               uint64_t paint_style);
void draw_round_rect(struct DrawingHandle *handle,
                     int64_t radius_x,
                     int64_t radius_y,
                     int64_t left,
                     int64_t top,
                     int64_t right,
                     int64_t bottom,
                     uint8_t alpha,
                     uint8_t red,
                     uint8_t green,
                     uint8_t blue,
                     uint64_t paint_style);
void restore(struct DrawingHandle *handle);
void rotate(struct DrawingHandle *handle, float degrees);
void save(struct DrawingHandle *handle);
void scale(struct DrawingHandle *handle, float scale_x, float scale_y);
void translate(struct DrawingHandle *handle, float x, float y);
void free_in_progress_data(struct InProgressDataHandle *data);
struct InProgressDataHandle *start_capture(unsigned int platform);
struct ByteArray *finish_capture(struct InProgressDataHandle *handle, unsigned int root_id);
unsigned int view_metadata(struct InProgressDataHandle *session_handle,
                           signed char alpha,
                           unsigned short flags1,
                           int view_class,
                           int8_t *custom_attrs,
                           uintptr_t custom_attrs_len,
                           BlockType block_type,
                           int x1,
                           int y1,
                           int x2,
                           int y2);
unsigned int view(struct InProgressDataHandle *session_handle,
                  unsigned long id,
                  bool view_cached,
                  bool children_cached,
                  int canvas,
                  unsigned int metadata,
                  unsigned int *children_ptr,
                  uintptr_t children_len,
                  unsigned int previous);
unsigned long view_id(const struct ByteArray *byte_array);