lib/src/shared_flutter_bindings_generated.dart


  late final _draw_circlePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<DrawingHandle>,
            ffi.Int64,
            ffi.Int64,
            ffi.Float,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint64,
          )
        >
      >('draw_circle');
  late final _draw_circle = _draw_circlePtr
      .asFunction<
        void Function(
          ffi.Pointer<DrawingHandle>,
          int,
          int,
          double,
          int,
          int,
          int,
          int,
          int,
        )
      >();



  void draw_line(
    ffi.Pointer<DrawingHandle> handle,
    int start_x,
    int start_y,
    int end_x,
    int end_y,
    int alpha,
    int red,
    int green,
    int blue,
    int paint_style,
  ) {
    return _draw_line(
      handle,
      start_x,
      start_y,
      end_x,
      end_y,
      alpha,
      red,
      green,
      blue,
      paint_style,
    );
  }

  late final _draw_linePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<DrawingHandle>,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint64,
          )
        >
      >('draw_line');
  late final _draw_line = _draw_linePtr
      .asFunction<
        void Function(
          ffi.Pointer<DrawingHandle>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();



  void draw_text(
    ffi.Pointer<DrawingHandle> handle,
    int text_id,
    int x,
    int y,
    int alpha,
    int red,
    int green,
    int blue,
    double text_size,
    int text_style,
    int text_align,
    int text_bounds_width,
    int text_bounds_height,
    bool masked,
  ) {
    return _draw_text(
      handle,
      text_id,
      x,
      y,
      alpha,
      red,
      green,
      blue,
      text_size,
      text_style,
      text_align,
      text_bounds_width,
      text_bounds_height,
      masked,
    );
  }

  late final _draw_textPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<DrawingHandle>,
            ffi.Uint64,
            ffi.Int64,
            ffi.Int64,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Float,
            ffi.Uint64,
            ffi.Uint64,
            ffi.Int64,
            ffi.Int64,
            ffi.Bool,
          )
        >
      >('draw_text');
  late final _draw_text = _draw_textPtr
      .asFunction<
        void Function(
          ffi.Pointer<DrawingHandle>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          double,
          int,
          int,
          int,
          int,
          bool,
        )
      >();



  void draw_rect(
    ffi.Pointer<DrawingHandle> handle,
    int left,
    int top,
    int right,
    int bottom,
    int alpha,
    int red,
    int green,
    int blue,
    int paint_style,
  ) {
    return _draw_rect(
      handle,
      left,
      top,
      right,
      bottom,
      alpha,
      red,
      green,
      blue,
      paint_style,
    );
  }

  late final _draw_rectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<DrawingHandle>,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint64,
          )
        >
      >('draw_rect');
  late final _draw_rect = _draw_rectPtr
      .asFunction<
        void Function(
          ffi.Pointer<DrawingHandle>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();



  void draw_round_rect(
    ffi.Pointer<DrawingHandle> handle,
    int radius_x,
    int radius_y,
    int left,
    int top,
    int right,
    int bottom,
    int alpha,
    int red,
    int green,
    int blue,
    int paint_style,
  ) {
    return _draw_round_rect(
      handle,
      radius_x,
      radius_y,
      left,
      top,
      right,
      bottom,
      alpha,
      red,
      green,
      blue,
      paint_style,
    );
  }

  late final _draw_round_rectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<DrawingHandle>,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Int64,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint64,
          )
        >
      >('draw_round_rect');
  late final _draw_round_rect = _draw_round_rectPtr
      .asFunction<
        void Function(
          ffi.Pointer<DrawingHandle>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();



  void restore(ffi.Pointer<DrawingHandle> handle) {
    return _restore(handle);
  }

  late final _restorePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DrawingHandle>)>
      >('restore');
  late final _restore = _restorePtr
      .asFunction<void Function(ffi.Pointer<DrawingHandle>)>();



  void rotate(ffi.Pointer<DrawingHandle> handle, double degrees) {
    return _rotate(handle, degrees);
  }

  late final _rotatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<DrawingHandle>, ffi.Float)
        >
      >('rotate');
  late final _rotate = _rotatePtr
      .asFunction<void Function(ffi.Pointer<DrawingHandle>, double)>();



  void save(ffi.Pointer<DrawingHandle> handle) {
    return _save(handle);
  }

  late final _savePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DrawingHandle>)>
      >('save');
  late final _save = _savePtr
      .asFunction<void Function(ffi.Pointer<DrawingHandle>)>();




  void scale(
    ffi.Pointer<DrawingHandle> handle,
    double scale_x,
    double scale_y,
  ) {
    return _scale(handle, scale_x, scale_y);
  }

  late final _scalePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<DrawingHandle>, ffi.Float, ffi.Float)
        >
      >('scale');
  late final _scale = _scalePtr
      .asFunction<void Function(ffi.Pointer<DrawingHandle>, double, double)>();



  void translate(ffi.Pointer<DrawingHandle> handle, double x, double y) {
    return _translate(handle, x, y);
  }

  late final _translatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<DrawingHandle>, ffi.Float, ffi.Float)
        >
      >('translate');
  late final _translate = _translatePtr
      .asFunction<void Function(ffi.Pointer<DrawingHandle>, double, double)>();


  void free_in_progress_data(ffi.Pointer<InProgressDataHandle> data) {
    return _free_in_progress_data(data);
  }

  late final _free_in_progress_dataPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<InProgressDataHandle>)>
      >('free_in_progress_data');
  late final _free_in_progress_data = _free_in_progress_dataPtr
      .asFunction<void Function(ffi.Pointer<InProgressDataHandle>)>();

  ffi.Pointer<InProgressDataHandle> start_capture(int platform) {
    return _start_capture(platform);
  }

  late final _start_capturePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<InProgressDataHandle> Function(ffi.UnsignedInt)
        >
      >('start_capture');
  late final _start_capture = _start_capturePtr
      .asFunction<ffi.Pointer<InProgressDataHandle> Function(int)>();





  ffi.Pointer<ByteArray> finish_capture(
    ffi.Pointer<InProgressDataHandle> handle,
    int root_id,
  ) {
    return _finish_capture(handle, root_id);
  }

  late final _finish_capturePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ByteArray> Function(
            ffi.Pointer<InProgressDataHandle>,
            ffi.UnsignedInt,
          )
        >
      >('finish_capture');
  late final _finish_capture = _finish_capturePtr
      .asFunction<
        ffi.Pointer<ByteArray> Function(ffi.Pointer<InProgressDataHandle>, int)
      >();





  int view_metadata(
    ffi.Pointer<InProgressDataHandle> session_handle,
    int alpha,
    int flags1,
    int view_class,
    ffi.Pointer<ffi.Int8> custom_attrs,
    int custom_attrs_len,
    int block_type,
    int x1,
    int y1,
    int x2,
    int y2,
  ) {
    return _view_metadata(
      session_handle,
      alpha,
      flags1,
      view_class,
      custom_attrs,
      custom_attrs_len,
      block_type,
      x1,
      y1,
      x2,
      y2,
    );
  }

  late final _view_metadataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<InProgressDataHandle>,
            ffi.SignedChar,
            ffi.UnsignedShort,
            ffi.Int,
            ffi.Pointer<ffi.Int8>,
            ffi.UintPtr,
            ffi.Uint32,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('view_metadata');
  late final _view_metadata = _view_metadataPtr
      .asFunction<
        int Function(
          ffi.Pointer<InProgressDataHandle>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Int8>,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();






  int view(
    ffi.Pointer<InProgressDataHandle> session_handle,
    int id,
    bool view_cached,
    bool children_cached,
    int canvas,
    int metadata,
    ffi.Pointer<ffi.UnsignedInt> children_ptr,
    int children_len,
    int previous,
  ) {
    return _view(
      session_handle,
      id,
      view_cached,
      children_cached,
      canvas,
      metadata,
      children_ptr,
      children_len,
      previous,
    );
  }

  late final _viewPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<InProgressDataHandle>,
            ffi.UnsignedLong,
            ffi.Bool,
            ffi.Bool,
            ffi.Int,
            ffi.UnsignedInt,
            ffi.Pointer<ffi.UnsignedInt>,
            ffi.UintPtr,
            ffi.UnsignedInt,
          )
        >
      >('view');
  late final _view = _viewPtr
      .asFunction<
        int Function(
          ffi.Pointer<InProgressDataHandle>,
          int,
          bool,
          bool,
          int,
          int,
          ffi.Pointer<ffi.UnsignedInt>,
          int,
          int,
        )
      >();

  int view_id(ffi.Pointer<ByteArray> byte_array) {
    return _view_id(byte_array);
  }

  late final _view_idPtr =
      _lookup<
        ffi.NativeFunction<ffi.UnsignedLong Function(ffi.Pointer<ByteArray>)>
      >('view_id');
  late final _view_id = _view_idPtr
      .asFunction<int Function(ffi.Pointer<ByteArray>)>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final EncoderBindings _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ByteArray>)>>
  get free_byte_array => _library._free_byte_arrayPtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DrawingHandle>)>>
  get free_drawing => _library._free_drawingPtr;
  ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<InProgressDataHandle>)>
  >
  get free_in_progress_data => _library._free_in_progress_dataPtr;
}

final class DrawingBundlerHandle extends ffi.Opaque {}
